--- a/src/index.css
+++ b/src/index.css
@@ -32,13 +32,13 @@ body {
 }
 
 h1 {
-  font-size: 3.2em;
+  font-size: 2.3em;
   line-height: 1.1;
 }
 
 button {
   border-radius: 8px;
-  border: 1px solid transparent;
+  border: 2px solid transparent;
   padding: 0.6em 1.2em;
   font-size: 1em;
   font-weight: 500;
@@ -48,7 +48,8 @@ button {
   transition: border-color 0.25s;
 }
 button:hover {
-  border-color: #646cff;
+  background-color: #213547;
+  color: white;
 }
 button:focus,
 button:focus-visible {
@@ -61,9 +62,30 @@ button:focus-visible {
     background-color: #ffffff;
   }
   a:hover {
-    color: #747bff;
+    color: #213547;
   }
   button {
     background-color: #f9f9f9;
   }
+}
+
+.buttons {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  margin-bottom: 40px;
+  margin-top: 40px;
+  font-size: 16px;
+}
+
+.tables-themes > th {
+  font-size: 20px;
+  padding-right: 30px;
+  padding-left: 30px;
+  padding-bottom: 20px;
+}
+
+.tables-content > td {
+  padding-bottom: 20px;
+  font-size: 16px;
 }
